--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/redux-logger": "^3.0.9",
     "@types/uuid": "^9.0.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.3.5",
     "emoji-mart": "^5.5.2",
     "formik": "^2.2.9",
+    "framer-motion": "^10.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-spring": "^9.7.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "socket.io-client": "^4.6.1",
