--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/uuid": "^9.0.1",
     "animate.css": "^4.1.1",
     "axios": "^1.3.5",
+    "compose-function": "^3.0.3",
     "emoji-mart": "^5.5.2",
     "formik": "^2.2.9",
     "framer-motion": "^10.11.4",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -27,10 +29,12 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "socket.io-client": "^4.6.1",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
+    "@types/compose-function": "^0.0.30",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
