--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.3.5",
     "compose-function": "^3.0.3",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "emoji-mart": "^5.5.2",
     "formik": "^2.2.9",
     "framer-motion": "^10.11.4",
+    "jwt-decode": "^3.1.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,6 +47,7 @@
     "sass": "^1.61.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
+    "vite-plugin-environment": "^1.1.3",
     "vite-tsconfig-paths": "^4.0.8"
   }
 }
