--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
   },
   "devDependencies": {
     "@types/compose-function": "^0.0.30",
+    "@types/madge": "^5.0.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "classnames": "^2.3.2",
+    "madge": "^6.0.0",
     "prettier": "^2.8.8",
     "sass": "^1.61.0",
     "typescript": "^4.9.3",
