--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "connect-app",
+  "name": "client-react-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,9 +11,8 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/redux-logger": "^3.0.9",
-    "@types/uuid": "^9.0.1",
     "animate.css": "^4.1.1",
     "axios": "^1.3.5",
     "compose-function": "^3.0.3",
@@ -23,18 +22,21 @@
     "formik": "^2.2.9",
     "framer-motion": "^10.11.4",
     "jwt-decode": "^3.1.2",
+    "megajs": "^1.1.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-spring": "^9.7.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "socket.io-client": "^4.6.1",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
-    "vite-plugin-svgr": "^2.4.0"
+    "vite-plugin-svgr": "^2.4.0",
+    "yup": "^1.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/compose-function": "^0.0.30",
@@ -42,6 +44,8 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/redux-logger": "^3.0.9",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "classnames": "^2.3.2",
     "madge": "^6.0.0",
