--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client-react-app",
+  "name": "voxvawe-client-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,26 +17,21 @@
     "axios": "^1.3.5",
     "compose-function": "^3.0.3",
     "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
     "emoji-mart": "^5.5.2",
     "formik": "^2.2.9",
-    "framer-motion": "^10.11.4",
     "jwt-decode": "^3.1.2",
-    "megajs": "^1.1.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.3",
     "socket.io-client": "^4.6.1",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.4.0",
-    "yup": "^1.2.0",
-    "zod": "^3.21.4"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/compose-function": "^0.0.30",
@@ -48,8 +43,8 @@
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "classnames": "^2.3.2",
-    "madge": "^6.0.0",
     "prettier": "^2.8.8",
+    "redux-logger": "^3.0.6",
     "sass": "^1.61.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
