--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.29.3",
     "emoji-mart": "^5.5.2",
     "formik": "^2.2.9",
+    "howler": "^2.2.3",
     "jwt-decode": "^3.1.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/compose-function": "^0.0.30",
+    "@types/howler": "^2.2.7",
     "@types/madge": "^5.0.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
