--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-image-crop": "^10.1.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux-saga": "^1.2.3",
