--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.0",
     "react-hot-toast": "^2.4.1",
     "react-image-crop": "^10.1.5",
     "react-redux": "^8.0.5",
