--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-image-crop": "^10.1.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-virtuoso": "^4.6.0",
     "redux-saga": "^1.2.3",
     "socket.io-client": "^4.6.1",
     "usehooks-ts": "^2.9.1",
